--- a/packages/nextjs/public/manifest.json
+++ b/packages/nextjs/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Scaffold-ETH 2 DApp",
+  "name": "The Ethereal Forge DApp",
   "description": "A DApp built with Scaffold-ETH",
   "iconPath": "logo.svg"
 }
